--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+@import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap");
+
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -63,4 +66,18 @@
   body {
     @apply bg-background text-foreground;
   }
+}
+
+
+@font-face {
+  font-family: "NeueMachina-Regular";
+  src: url("./fonts/NeueMachina-Regular.otf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: "NeueMachina-Bold";
+  src: url("./fonts/NeueMachina-Ultrabold.otf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
 }
