--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,58 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+table {
+  width: 100%;
+  border-collapse: collapse;  /* Ensures borders between cells are merged */
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+th, td {
+  border-bottom: 1px solid #8683837d;  /* Thin line after each row */
+  border-right: 1px solid #8683837d;   /* Thin line after each column */
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+th:last-child, td:last-child {
+  border-right: none; /* Remove right border for the last column */
+}
+
+tr:last-child th, tr:last-child td {
+  border-bottom: none; /* Remove bottom border for the last row */
+}
+
+
+
+.twinkling-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.twinkling-star {
+  font-size: 50px; /* Adjust size as needed */
+  color: #fbbf24; /* Star color (you can change it) */
+  animation: twinkle 2s infinite ease-in-out, scaleTwinkle 2s infinite ease-in-out;
+}
+
+@keyframes twinkle {
+  0% {
+    opacity: 0.5;
   }
-  to {
-    transform: rotate(360deg);
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0.5;
   }
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
+@keyframes scaleTwinkle {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.2);
+  }
+  100% {
+    transform: scale(1);
   }
 }
 
-.card {
-  padding: 2em;
-}
 
-.read-the-docs {
-  color: #888;
-}
+
